--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "axios": "^0.16.1",
     "moment": "^2.18.1",
+    "sweetalert": "^1.1.3",
+    "sweetalert2": "^6.6.4",
     "vue": "^2.2.1",
     "vue-datepicker": "^1.3.0",
-    "vue-router": "^2.5.3"
+    "vue-router": "^2.5.3",
+    "vue-sweetalert": "^0.1.17"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
